--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
       - name: Install dependencies
         run: npm install
+      - name: Security audit
+        run: npm audit --audit-level=moderate
+        continue-on-error: true
       - name: build
         run: npx projen build
       - name: Find mutations
